# src/routes/orders.ts
@@ -1,0 +1,9 @@
+import { Router } from 'express';
+import { checkAutMiddlware } from '../middlewares/auth-thunk';
+import { putAnOrder } from '../controllers/orders';
+
+const router = Router();
+
+router.post('/orders', checkAutMiddlware, putAnOrder);
+
+export default router;
