# src/types/types.ts
@@ -11,6 +11,8 @@ export type TIngredient = {
   image: string;
   image_mobile: string;
   image_large: string;
+  __v: number,
+  _id?: mongoose.Types.ObjectId,
 };
 
 export type TUser = {
@@ -19,9 +21,28 @@ export type TUser = {
   email: string,
   password: string,
   passwordResetToken?: string | null,
+  createdAt: string,
+  updatedAt: string
 };
 
 export interface CustomError {
   code?: number;
   name?: string;
+};
+
+export type TOrderDetails = {
+  createdAt: string,
+  name: string,
+  number: number,
+  price: number,
+  status: string,
+  updatedAt: string,
+  _id?: string,
+  ingredients: TIngredient[],
+  owner: {
+    createdAt: string,
+    email: string,
+    name: string,
+    updatedAt: string,
+  },
 };
